Fix card wrap

--- a/styles/style.css
+++ b/styles/style.css
@@ -177,12 +177,15 @@
 	margin-bottom: 27px;
 }
 
+/* 
+	При добавление новой карточки, она занимает 100% ширины (ибо это не было обговорено должна ли она сохранять свои пропорции 
+*/
 .lots__list {
 	list-style-type: none;
 
 	display: flex;
 	flex-direction: row;
-	flex-grow: 1;
+	flex-wrap: wrap;
 	gap: 25px;
 
 	margin-bottom: 29px;
@@ -220,8 +223,6 @@
 .lots__list-item:nth-child(3) .card {
 	background-image: url(../images/card-lot-03.jpg);
 }
-
-
 
 .card__heading {
 	font-weight: 700;
@@ -317,7 +318,7 @@
 
 .footer .navigation-list {
 	list-style-type: none;
-	
+
 	display: flex;
 	flex-direction: column;
 	align-items: center;
